@@ -4,18 +4,18 @@
 
 pkgname=acerhk
 pkgver=0.5.35
-pkgrel=14
+pkgrel=15
 pkgdesc="Acer hotkey driver"
 url="http://www.cakey.de/acerhk/"
 arch=('i686') # Unavailable for x86_64
 license=('GPL')
-depends=('kernel26>=2.6.30' 'kernel26<2.6.31')
+depends=('kernel26>=2.6.31' 'kernel26<2.6.32')
 source=(http://www.cakey.de/acerhk/archives/${pkgname}-${pkgver}.tgz acerhk.rc
         2.6.30.patch)
 install=acerhk.install
 md5sums=('05255919f312cb76af473a760c284433' '935584b3e4bfbb3af8460558e5b98bb5'
          '2a0bc99e5b12e25096441df4d53d7df7')
-_kernver=2.6.30-ARCH
+_kernver=2.6.31-ARCH
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
